# ocr-service

./: .gitignore  Dockerfile  README.md  docker-compose.vllm.yml  docker-compose.yml  main.py  nginx.conf  pyproject.toml
core/: base.py  utils.py
core/interfaces/: api_interface.py
core/scripts/: export_pdf_public_test.py
core/services/: minio.py  ocr_llm.py  redis.py
output_bug_images/Public_640/: Public_640.md
output_bug_images/Public_647/: Public_647.md
output_bug_images/Public_652/: Public_652.md
output_bug_images/Public_653/: Public_653.md
output_bug_images/Public_654/: Public_654.md
output_bug_images/Public_665/: Public_665.md
output_bug_images/Public_672/: Public_672.md
scripts/: export_pdf_public_test.py  format_to_result.py  retry_export_pdf.py  zip_results.py
services/ocr/: router.py  service.py
services/pdf_extractor/: router.py  service.py
services/pdf_extractor/merge_services/: table_aware.py  table_aware_2.py
